<resources>
    <string name="app_name">InDigital.Study</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="schedule">Schedule</string>
    <string name="create_new_account">Create new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up.</string>
    <string name="remember_me">Remember me</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="surname_name">Surname Name</string>
    <string name="log_out">Log Out</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="ok">OK</string>
    <string name="confirm_email">Confirm email</string>
    <string name="online">Online</string>
    <string name="you_need_to_start_communication_press_to_start_talk_with_someone">You need to start communication, press + to start talk with someone</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="_7">+7-</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_received_otp">Didn\'t received OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
</resources>