<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    android:background="@color/blue"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            >

        </TextView>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ImageProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/avatar_default"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                />
        </FrameLayout>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/audi_image"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:inputType="textEmailAddress"
            android:textColorHint="#5C5656"
            android:hint="@string/name"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:background="@drawable/edit_text_border"/>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/audi_image"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:textColorHint="#5C5656"
            android:hint="@string/email"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:background="@drawable/edit_text_border"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/audi_image"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textColorHint="#5C5656"
            android:hint="@string/password"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:background="@drawable/edit_text_border"/>

        <EditText
            android:id="@+id/ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/audi_image"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textColorHint="#5C5656"
            android:hint="@string/confirm_password"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:background="@drawable/edit_text_border"/>

        <Button
            android:id="@+id/signUp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/signup_btn_bg"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/sign_in"
            android:gravity="center"

            />

    </LinearLayout>

</ScrollView>